--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     <header class="header">
       <div class="header-content">
         <div class="logo">
-          <img src="/logo.png" alt="STL to STEP Converter" class="logo-img">
+          <i class="fas fa-cube"></i>
+          <span>STL → STEP</span>
         </div>
         <div class="header-actions">
           <button id="healthBtn" class="btn btn-ghost" title="Check System Health">
@@ -105,9 +106,15 @@
         </div>
       </section>
 
-      <!-- Jobs Section - Hidden, no history -->
-      <section id="jobsSection" class="jobs-section" style="display: none;">
-        <div id="jobsList" class="jobs-list"></div>
+      <!-- Jobs Section -->
+      <section id="jobsSection" class="jobs-section">
+        <h3><i class="fas fa-tasks"></i> Current Conversion</h3>
+        <div id="jobsList" class="jobs-list">
+          <div class="empty-state">
+            <i class="fas fa-inbox"></i>
+            <p>No active conversions</p>
+          </div>
+        </div>
       </section>
     </main>
 
