--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
       </section>
 
       <!-- Preview Section -->
-      <section id="previewSection" class="preview-section hidden">
+      <section id="previewSection" class="preview-section">
         <div class="preview-header">
           <h3><i class="fas fa-eye"></i> 3D Preview</h3>
           <div class="preview-controls">
