Improve conversion pipeline and queue handling

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,16 @@
                 </span>
               </label>
             </div>
+            <div class="option-group">
+              <label class="checkbox-label">
+                <input type="checkbox" id="skipFaceMerge">
+                <span class="checkmark"></span>
+                Skip face merging
+                <span class="tooltip" title="Skips merging coplanar triangles into single faces. Results in faster conversion but more triangulated geometry. Face merging only works on flat surfaces - curved surfaces will remain triangulated regardless.">
+                  <i class="fas fa-info-circle"></i>
+                </span>
+              </label>
+            </div>
           </div>
         </div>
       </section>
